add all arguments as locations or config files